# ExtraHop-Akonis-automation-library

ExtraHop/: action_get_detection.json  action_get_device.json  action_search_detections.json  action_update_detection.json  action_watchlist_add.json  action_watchlist_remove.json  (+1 more)
ExtraHop-Akonis/: CHANGELOG.md  Dockerfile  action_acknowledge_detection.json  action_assign_detection.json  action_close_detection.json  action_get_detection.json  action_get_device.json  action_link_ticket.json  action_search_devices.json  action_search_records.json  action_update_detection_status.json  connector_extrahop_detections.json  extrahop_connector_specification.md  main.py  manifest.json  pyproject.toml  trigger_extrahop_detections.json
ExtraHop-Akonis/extrahop/: __init__.py  action.py  detection_actions.py  detections_connector.py  device_actions.py  metrics.py
ExtraHop-Akonis/extrahop-akonis_modules/: __init__.py  models.py
ExtraHop-Akonis/extrahop/client/: __init__.py  errors.py  http_client.py
ExtraHop-Akonis/formats/_meta/: manifest.yml
ExtraHop-Akonis/formats/extrahop-detections/_meta/: fields.yml  manifest.yml  smart-descriptions.json
ExtraHop-Akonis/formats/extrahop-detections/ingest/: parser.yml
ExtraHop-Akonis/formats/extrahop-detections/tests/: audit_log_entry.json  detection_lateral_movement.json  detection_rdp_brute_force.json
ExtraHop-Akonis/tests/: __init__.py  conftest.py  test_action.py  test_detection_actions.py  test_detections_connector.py  test_device_actions.py
ExtraHop-Akonis/tests/client/: __init__.py  test_errors.py  test_http_client.py
(+11 files in other folders)
